--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Hello</title>
     </head>
     <body>
         <h1>Welcome to my Webpage</h1>
+        <h1>Hello world</h1>
         Hello!
     </body>
 </html>
